--- a/Css/styles.css
+++ b/Css/styles.css
@@ -20,10 +20,15 @@
   --input: hsl(214.3, 31.8%, 91.4%);
   --ring: hsl(222.2, 84%, 4.9%);
   --radius: 0.5rem;
+  --shadow: hsla(0, 91%, 69%, 0.751);
   
   /* Gradients */
   --gradient-primary: linear-gradient(135deg, hsl(0, 84%, 60%), hsl(0, 84%, 70%));
   --gradient-hero: linear-gradient(135deg, var(--background), var(--muted));
+
+ /* Box effect  */
+ --box-effect:  var(--shadow) 0px 2px 4px, var(--shadow) 0px 7px 13px -3px, var(--shadow) 0px -3px 0px inset;
+ --box-effect2: var(--shadow)  0px 1px 2px, var(--shadow) 0px 2px 4px, var(--shadow) 0px 4px 8px, var(--shadow) 0px 8px 16px,var(--shadow) 0px 16px 32px, var(--shadow) 0px 32px 64px;
 }
 
 /* Dark theme colors */
@@ -51,6 +56,8 @@
   /* Dark gradients */
   --gradient-hero: linear-gradient(135deg, var(--background), var(--secondary));
 }
+
+
 
 /* Reset and base styles */
 * {
@@ -666,8 +673,9 @@ html {
 }
 
 .team-card:hover {
+  
   transform: translateY(-10px);
-  box-shadow: 0 25px 50px hsl(var(--primary) / 0.15);
+  box-shadow: var(--box-effect);
   border-color: var(--primary);
 }
 
